# botany

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.codex/: state.json
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_webhook_queue_fields.py  0003_model_versions_registry.py
apps/api-gateway/: main.py
apps/web/: package-lock.json  package.json  tailwind.config.ts
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  DECISIONS.md  IMPLEMENTATION_SUMMARY.md  PREFLIGHT_REPORT.md  PREFLIGHT_TODO.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROGRESS.md  RISKS.md  SECURITY_CHECKLIST.md  STRICT_REVIEW_GATE.md
infra/terraform/: dev.tfvars.example  main.tf  outputs.tf  variables.tf  versions.tf
libs/auth/: dependencies.py  security.py  types.py
libs/common/: ai.py  audit.py  config.py  database.py  events.py  idempotency.py  integrations.py  logging.py  metrics.py  models.py  rate_limit.py  secrets.py  storage.py  tracing.py
libs/schemas/: api.py  events.py
modules/aeca/: adapters.py  service.py  workflow.py
modules/aviqm/: service.py  workflow.py
modules/awb/: adapters.py  service.py  workflow.py
modules/dg/: service.py  workflow.py
modules/discrepancy/: service.py  workflow.py
modules/fiar/: adapters.py  service.py  workflow.py
scripts/: preflight.sh
tests/: conftest.py  test_adapters_contracts.py  test_awb_rules.py  test_fiar_matching.py  test_hardening_endpoints.py  test_ingestion_pipeline.py  test_phase3_phase4_endpoints.py  test_phase4_features.py  test_validation_rules_engine.py  test_webhook_worker.py
(+40 files in other folders)
